# SYP-PR-01670-keylemon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
configs/endpoints/: endpoint-a.yaml  endpoint-b.yaml
configs/policies/: allow-tpm-to-tee.yaml  degraded-mode.yaml  require-mutual-attestation.yaml
crates/attestation-broker/: Cargo.toml
crates/attestation-broker/src/: lib.rs
crates/attestation-core/: Cargo.toml
crates/attestation-core/src/: lib.rs  mock.rs  model.rs  verifier.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: lib.rs
crates/session-binding/: Cargo.toml
crates/session-binding/src/: lib.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: lib.rs
docs/: architecture.md  demo.md  future-real-backends.md  keylime-integration.md  threat-model.md
examples/: echo_demo.py  mock_mutual_attestation.py  policy.yaml  scenario_allowed.rs  scenario_bad_measurement.rs  scenario_degraded_mode.rs  scenario_ima_fail.rs  scenario_replay.rs  scenario_session_binding_fail.rs  scenario_tee_debug.rs
keylemon/: __init__.py  broker.py  certificates.py  cli.py  keylime_client.py  models.py  policy.py  schemas.py  server.py  signing.py  wrapper.py
keylemon/tee/: __init__.py  base.py  mock.py  snp.py
scripts/: clean.sh  demo.sh  test.sh
src/: scenarios.rs
tests/: scenario_smoke.rs  test_api.py  test_broker_policy.py  test_certificates.py  test_keylime_client.py  test_keylime_fixtures.py  test_mock_flow.py
