[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keylemon"
version = "0.1.0"
description = "Capability-driven attestation broker PoC for Keylime TPM/vTPM and TEE evidence"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=41",
  "PyYAML>=6",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
keylemon-broker = "keylemon.cli:main"

[tool.setuptools.packages.find]
include = ["keylemon*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
