[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
attestation-core = { path = "../attestation-core" }
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

